fixed spacing and the margin

--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@
     font-family: 'Open Sans', sans-serif;
 }
 h1,h2 {
-    padding: .5rem;
+    padding: .5rem 2rem;
 }
 h4 {
-    padding-top: 2rem;
+    padding: 2rem;
 }
 td, th {
     padding:.3rem;
+}
+p {
+    padding:.2rem 1rem;
 }
 body {
     background-color:hsl(125, 0%, 10%);
@@ -23,7 +26,7 @@ div, nav {
     width:100%;
     padding:.5rem;
     border:1px solid white;
-    margin: .5rem;
+    margin-bottom:1rem;
 }
 nav {
     display: grid;
